updated 404 w back button + spelling

--- a/404.html
+++ b/404.html
@@ -15,10 +15,10 @@
 		<br>  <!--I don't know how add a space in css here and not have it fuck up other things, so this works for now-->
 		<div class="box">
 			<h2>404!</h2>
-			<p>File not found. If you think this should exist, you find my contact info on the home page.<br><br></p>
+			<p>File not found. If you think this should exist, reach out to me:  my contact info is on the home page.<br><br></p>
 			<h3 style="text-align: center"><a href="index.html">Return home.</a></h3>
 
-
+			<h3 style="text-align: center"><a href="#" onClick="history.go(-1); return false;">Previous page.</a></h3>
 
 			---<br>
 			<p class="footer">
