--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-	<link href="static/css/style.css" rel="stylesheet">
+	<link href="./static/css/style.css" rel="stylesheet">
 
 		<meta charset="utf-8">
 		<title>Mehvix | 404</title>
@@ -16,7 +16,7 @@
 		<div class="box">
 			<h2>404!</h2>
 			<p>File not found. If you think this should exist, reach out to me:  my contact info is on the home page.<br><br></p>
-			<h3 style="text-align: center"><a href="index.html">Return home.</a></h3>
+			<h3 style="text-align: center"><a href="./index.html">Return home.</a></h3>
 
 			<h3 style="text-align: center"><a href="#" onClick="history.go(-1); return false;">Previous page.</a></h3>
 
