--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
 <html>
 	<head>
+<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+MMMMMMMM               MMMMMMMM                   hhhhhhh                                    iiii
+M:::::::M             M:::::::M                   h:::::h                                   i::::i
+M::::::::M           M::::::::M                   h:::::h                                    iiii
+M:::::::::M         M:::::::::M                   h:::::h
+M::::::::::M       M::::::::::M    eeeeeeeeeeee    h::::h hhhhh   vvvvvvv           vvvvvvviiiiiii xxxxxxx      xxxxxxx
+M:::::::::::M     M:::::::::::M  ee::::::::::::ee  h::::hh:::::hhh v:::::v         v:::::v i:::::i  x:::::x    x:::::x
+M:::::::M::::M   M::::M:::::::M e::::::eeeee:::::eeh::::::::::::::hhv:::::v       v:::::v   i::::i   x:::::x  x:::::x
+M::::::M M::::M M::::M M::::::Me::::::e     e:::::eh:::::::hhh::::::hv:::::v     v:::::v    i::::i    x:::::xx:::::x
+M::::::M  M::::M::::M  M::::::Me:::::::eeeee::::::eh::::::h   h::::::hv:::::v   v:::::v     i::::i     x::::::::::x
+M::::::M   M:::::::M   M::::::Me:::::::::::::::::e h:::::h     h:::::h v:::::v v:::::v      i::::i      x::::::::x
+M::::::M    M:::::M    M::::::Me::::::eeeeeeeeeee  h:::::h     h:::::h  v:::::v:::::v       i::::i      x::::::::x
+M::::::M     MMMMM     M::::::Me:::::::e           h:::::h     h:::::h   v:::::::::v        i::::i     x::::::::::x
+M::::::M               M::::::Me::::::::e          h:::::h     h:::::h    v:::::::v        i::::::i   x:::::xx:::::x
+M::::::M               M::::::M e::::::::eeeeeeee  h:::::h     h:::::h     v:::::v         i::::::i  x:::::x  x:::::x
+M::::::M               M::::::M  ee:::::::::::::e  h:::::h     h:::::h      v:::v          i::::::i x:::::x    x:::::x
+MMMMMMMM               MMMMMMMM    eeeeeeeeeeeeee  hhhhhhh     hhhhhhh       vvv           iiiiiiiixxxxxxx      xxxxxxx
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
 		<link type="text/css" rel="stylesheet" href="static/css/style.css" >
 		<link type="text/css" rel="stylesheet" href="static/css/atom-one-dark-reasonable.css">
@@ -42,10 +62,11 @@
 			<p>
 					<b>Me</b><br>
 					- Email&emsp;&emsp;&emsp;&emsp;/	mehvix <code>at</code> protonmail <code>dot</code> com -- <a href="pgp.html">PGP key</a><br>
-					- Github&emsp;&emsp;&emsp;/ 		<a href="https://github.com/mehvix">Mehvix</a><br>
-					- Discord &emsp;/ 					Mehvix#7966<br>
-					- Linkedin&emsp;/ 					<a href="https://www.linkedin.com/in/maxlvogel/">Max Vogel</a><br>
-					- Keybase&emsp;&emsp;/ 				<a href="https://keybase.io/mehvix">Mehvix</a>
+					- Github&emsp;&emsp;&emsp;/ 	<a href="https://github.com/mehvix">Mehvix</a><br>
+					- Discord &emsp;/ 	Mehvix#7966<br>
+					- Linkedin&emsp;/ 	<a href="https://www.linkedin.com/in/maxlvogel/">Max Vogel</a><br>
+					- Keybase&emsp;&emsp;/ 	<a href="https://keybase.io/mehvix">Mehvix</a><br>
+					- Resumé&emsp;&emsp;&emsp;/   <a href="https://cloud.mehvix.com/s/9oXaWqbLR4amMmz">Link</a>
 				</p><br>
 
 			<p>
