--- a/projects.html
+++ b/projects.html
@@ -22,12 +22,91 @@
 			</p>
 
 			<article>
+				---
+<!--			<pre><code class="py" style="font-size: 150%">#TODO</code></pre>-->
+				<table>
+					<tr>
+						<td class="projects-image">
+							<img src="static/media/projects/synapsbot-avatar.jpg" >
+						</td>
+						<td class="projects-text">
+							<b>Synaps Bot</b><br>
+							<code class="tags-py">python</code>
+						</td>
+					</tr>
 
-			<pre><code class="py" style="font-size: 150%">#TODO</code></pre>
+					<tr><td class="projects-image">---</td><td class="projects-text"></td></tr>
+
+					<tr>
+						<td class="projects-image">
+							<img style="display: block;" src="static/media/projects/aoe2counters.jpg" >
+						</td>
+						<td class="projects-text">
+							<b>Age of Empires Counter List</b><br>
+							<code class="tags-sheet">sheets</code>
+
+						</td>
+					</tr>
+
+					<tr><td class="projects-image">---</td><td class="projects-text"></td></tr>
+
+					<tr>
+						<td class="projects-image">
+							<img style="display: block;" src="static/media/projects/cs50-puzzle.JPG" >
+						</td>
+						<td class="projects-text">
+							<b>Harvard CS50X Puzzle Day</b><br>
+							<code class="tags-misc">misc.</code>
+
+						</td>
+					</tr>
+
+					<tr><td class="projects-image">---</td><td class="projects-text"></td></tr>
+
+					<tr>
+						<td class="projects-image">
+							<img style="display: block;" src="static/media/projects/greenwallet.png" >
+						</td>
+						<td class="projects-text">
+							<b>Green Wallet</b><br>
+							<code class="tags-webdev">webdev</code>
+
+						</td>
+					</tr>
+
+					<tr><td class="projects-image">---</td><td class="projects-text"></td></tr>
+
+					<tr>
+						<td class="projects-image">
+							<img style="display: block;" src="static/media/projects/.png" >
+						</td>
+						<td class="projects-text">
+							<b>ApplicationConfigs</b><br>
+							<code class="tags-py">python</code>
+
+						</td>
+					</tr>
+					<tr>
+
+					<td class="projects-image">---</td><td class="projects-text"></td></tr>
+
+					<tr>
+						<td class="projects-image">
+							<img style="display: block;" src="static/media/projects/nextcloudicon.png" >
+						</td>
+						<td class="projects-text">
+							<b>Server</b><br>
+							<code class="tags-webdev">webdev</code>
+
+						</td>
+					</tr>
+
+
+				</table>
 
 			</article>
 
-			---<br>
+			<br><br>---<br>
 			<p class="footer">
 				BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
 				ETH / <a href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
