--- a/todo.html
+++ b/todo.html
@@ -79,7 +79,7 @@
 				<p>- Soundcloud Downloader with Metadata Scraper</p>
 			</article>
 
-<!--			<h3 style="text-align: center"><a href="index.html">Return home.</a></h3>-->
+<!--			<h3 style="text-align: center"><a href="./index.html">Return home.</a></h3>-->
 <!--			<h3 style="text-align: center"><a href="#" onClick="history.go(-1); return false;">Previous page.</a></h3>-->
 
 			---<br>
