--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ MMMMMMMM               MMMMMMMM    eeeeeeeeeeeeee  hhhhhhh     hhhhhhh       vvv
 		</style>
 	</head>
 	<body>
-		<br>  <!--I don't know how add a space in css here and not have it fuck up other things, so this works for now-->
+		<br>
 		<div class="box">
-			<p style="margin-top: 0">
-				<b><a href="./index.html" class="inverse-bg">About</a></b><br>
+			<p class="nav"><b><a href="./index.html" class="inverse-bg">About</a></b><br></p>
+			<p>
 				Hello! I’m Max Vogel. I’m a
 
 				<script>
@@ -57,7 +57,7 @@ MMMMMMMM               MMMMMMMM    eeeeeeeeeeeeee  hhhhhhh     hhhhhhh       vvv
 				year old who goes to Middleton High School. <a href="./static/media/IMG_20191020_011042.jpg">Here’s a
 				photo of me at UW’s 2019 Madhacks</a>. In my free time I am probably fencing, coding, CADing, playing
 				TF2 pugs, or am working on something <a href="https://www.team1306.com">1306</a> related.
-			</p><br>
+			</p>
 
 			<p>
 					<b>Me</b><br>
@@ -77,7 +77,7 @@ MMMMMMMM               MMMMMMMM    eeeeeeeeeeeeee  hhhhhhh     hhhhhhh       vvv
 				- <a href="serverservices.html">server service</a><br>
 			</p><br>
 
-			---<br>
+			---
 			<p class="footer">
 				BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
 				ETH / <a href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
@@ -85,7 +85,7 @@ MMMMMMMM               MMMMMMMM    eeeeeeeeeeeeee  hhhhhhh     hhhhhhh       vvv
 				<script>
 					document.write("" + new Date().getFullYear())
 				</script>
-				- Max Vogel<br>
+				- Max Vogel
 			</p>
 		</div>
 	</body>
