--- a/pgp.html
+++ b/pgp.html
@@ -15,10 +15,9 @@
 		</style>
 	</head>
 	<body>
-		<br>  <!--I don't know how add a space in css here and not have it fuck up other things, so this works for now-->
+		<br>
 		<div class="box">
-			<p style="margin-top: 0">
-				<b><a href="./index.html">About</a> / <a href="pgp.html" class="inverse-bg">PGP</a></b><br>
+			<p class="nav"><b><a href="./index.html">About</a> / <a href="pgp.html" class="inverse-bg">PGP</a></b><br>
 				<p>---</p>
 				<a href="./static/media/publickey.mehvix@protonmail.com.asc">Download</a><br>
 				<a href="#" onclick="var copyText = '-----BEGIN PGP PUBLIC KEY BLOCK-----\n'+
