--- a/projects-wip.html
+++ b/projects-wip.html
@@ -15,10 +15,10 @@
 		</style>
 	</head>
 	<body>
-		<br>  <!--I don't know how add a space in css here and not have it fuck up other things, so this works for now-->
+		<br>
 		<div class="box">
 			<p style="margin-top: 0">
-				<b><a href="./index.html">About</a> / <a href="projects.html" class="inverse-bg">Projects</a></b><br>
+				<p class="nav"><b><a href="./index.html">About</a> / <a href="projects.html" class="inverse-bg">Projects</a></b></p><br>
 			</p>
 
 			<article>
@@ -132,7 +132,7 @@
 				</table>
 			</article>
 
-			<br><br>---<br>
+			<br><br>---
 			<p class="footer">
 				BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
 				ETH / <a href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
@@ -140,7 +140,7 @@
 				<script>
 					document.write("" + new Date().getFullYear())
 				</script>
-				- Max Vogel<br>
+				- Max Vogel
 			</p>
 		</div>
 	</body>
