--- a/serverservices.html
+++ b/serverservices.html
@@ -15,9 +15,9 @@
 		</style>
 	</head>
 	<body>
-		<br>  <!--I don't know how add a space in css here and not have it fuck up other things, so this works for now-->
+		<br>
 		<div class="box">
-			<b><a href="./index.html">About</a> / <a href="serverservices.html" class="inverse-bg">Server Services</a></b><br>
+			<p class="nav"><b><a href="./index.html">About</a> / <a href="serverservices.html" class="inverse-bg">Server Services</a></b><br></p>
 			If you're interested in any of these or have any questions, my contact information is on the
 			<a href="./index.html">home page</a>.<br>
 			---
@@ -25,22 +25,21 @@
 				<b style="font-size: 100%">File Hosting and Media Streaming</b><br>
 				I’m selfhosting a Nextcloud instance at <a href="https://cloud.mehvix.com">cloud.mehvix.com</a> which
 				acts as a file hosting service and has addons for WebCAL, Tasks, and Contact syncing as well as a
-				password manager and non-intruisive map service. Additionally, you're able to stream media via Jellyfin
-				too. Here's pricing (monthly):<br><br>
-
+				password manager and non-intrusive map service. Additionally, you're able to stream media via Jellyfin
+				too. Here's pricing (monthly):
+			</p>
+			<p>
 				- 128GB  &emsp;&emsp;- $3.00<br>
 				- 256GB  &emsp;&emsp;- $5.00<br>
 				- 256GB+ &emsp;- Contact me<br><br>
 			</p>
 
 			<p>
-				<b style="font-size: 100%">TF2 / Minecraft Server</b><br>
-				I'll set up a server instance for TF2 / Minecraft. I'm open to other game servers too, but TF2 and
-				Minecraft are the 2 game servers I have experience configuring. If you are an experienced user I'll
-				also give you the login credentials. $5.00 gets you 16 players slots (and 2 GB RAM for MC).
+				<b style="font-size: 100%">TF2 / <a href="mc.html">Minecraft Server</a></b><br>
+				I'll set up a server instance for TF2 / Minecraft. I'm open to other game servers too, but TF2 and Minecraft are the 2 game servers I have experience configuring. If you are an experienced user I'll also give you the login credentials. $5.00 gets you 16 players slots (and 2 GB RAM for MC).
 			</p><br>
 
-			---<br>
+			---
 			<p class="footer">
 				BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
 				ETH / <a href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
@@ -48,7 +47,7 @@
 				<script>
 					document.write("" + new Date().getFullYear())
 				</script>
-				- Max Vogel<br>
+				- Max Vogel
 			</p>
 		</div>
 	</body>
