--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
 		</style>
 	</head>
 	<body>
-		<br>  <!--I don't know how add a space in css here and not have it fuck up other things, so this works for now-->
+		<br>
 		<div class="box">
 			<h2>404!</h2>
 			<p>File not found. If you think this should exist, reach out to me:  my contact info is on the home page.<br><br></p>
@@ -20,7 +20,7 @@
 
 			<h3 style="text-align: center"><a href="#" onClick="history.go(-1); return false;">Previous page.</a></h3>
 
-			---<br>
+			---
 			<p class="footer">
 				BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
 				ETH / <a href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
@@ -28,7 +28,7 @@
 				<script>
 					document.write("" + new Date().getFullYear())
 				</script>
-				- Max Vogel<br>
+				- Max Vogel
 			</p>
 		</div>
 	</body>
