--- a/todo.html
+++ b/todo.html
@@ -9,16 +9,16 @@
 		<title>Mehvix | todo</title>
 		<style>
 			:root{
-				--outside-bg-color: #209209;
+				--outside-bg-color: #168300;
 				--inside-bg-color: #cdd8df;
 			}
 		</style>
 	</head>
 	<body>
-		<br>  <!--I don't know how add a space in css here and not have it fuck up other things, so this works for now-->
+		<br>
 		<div class="box">
-			<p style="margin-top: 0">
-				<b><a href="./index.html">About</a>/<a href="todo.html" class="inverse-bg">#TODO</a></b><br>
+			<p class="nav"><b><a href="./index.html">About</a> / <a href="todo.html" class="inverse-bg">#TODO</a></b></p>
+			<p>My mostly up-to-date list of future projects I haven't gotten around to yet.</p>
 				My mostly up-to-date list of future projects I haven't gotten around to yet.<br>
 				---
 			</p>
@@ -82,7 +82,7 @@
 <!--			<h3 style="text-align: center"><a href="./index.html">Return home.</a></h3>-->
 <!--			<h3 style="text-align: center"><a href="#" onClick="history.go(-1); return false;">Previous page.</a></h3>-->
 
-			---<br>
+			---
 			<p class="footer">
 				BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
 				ETH / <a href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
@@ -90,7 +90,7 @@
 				<script>
 					document.write("" + new Date().getFullYear())
 				</script>
-				- Max Vogel<br>
+				- Max Vogel
 			</p>
 		</div>
 	</body>
