cleaned up stuff

--- a/404.html
+++ b/404.html
@@ -1,35 +1,37 @@
-<html>
-	<head>
-	<link href="/static/css/style.css" rel="stylesheet">
+<html lang="en">
+<head>
+    <link href="/static/css/style.css" rel="stylesheet">
+    <script src="static/js/include.js"></script>
 
-		<meta charset="utf-8">
-		<title>Mehvix | 404</title>
-		<style>
-			:root{
-				--outside-bg-color: #c2ba00;
-				--inside-bg-color: #ffffff;
-			}
-		</style>
-	</head>
-	<body>
-		<br>
-		<div class="box">
-			<h2>404!</h2>
-			<p>File not found. If you think this should exist, reach out to me:  my contact info is on the home page.<br><br></p>
-			<h3 style="text-align: center"><a href="mehvix.com">Return home.</a></h3>  <!--uhhh i'm lazy this works-->
+    <meta charset="utf-8">
+    <title>Mehvix | 404</title>
+    <style>
+        :root {
+            --outside-bg-color: #c2ba00;
+            --inside-bg-color: #ffffff;
+        }
+    </style>
+</head>
+<body>
+<br>
+<div class="box">
+    <h2>404!</h2>
+    <p>File not found. If you think this should exist, reach out to me: my contact info is on the home page.<br><br></p>
+    <h3 style="text-align: center"><a href="mehvix.com">Return home.</a></h3>  <!--uhhh i'm lazy this works-->
 
-			<h3 style="text-align: center"><a href="#" onClick="history.go(-1); return false;">Previous page.</a></h3>
+    <h3 style="text-align: center"><a href="#" onClick="history.go(-1); return false;">Previous page.</a></h3>
 
-			---
-			<p class="footer">
-				BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
-				ETH / <a href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
-				©
-				<script>
-					document.write("" + new Date().getFullYear())
-				</script>
-				- Max Vogel
-			</p>
-		</div>
+    ---
+    <p class="footer">
+        BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
+        ETH / <a
+            href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
+        ©
+        <script>
+            document.write("" + new Date().getFullYear())
+        </script>
+        - Max Vogel
+    </p>
+</div>
 	</body>
 </html>
