--- a/projects-wip.html
+++ b/projects-wip.html
@@ -1,147 +1,169 @@
-<html>
-	<head>
-		<link type="text/css" rel="stylesheet" href="static/css/style.css" >
-		<link type="text/css" rel="stylesheet" href="static/css/atom-one-dark-reasonable.css">
-		<script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
-		<script>hljs.initHighlightingOnLoad();</script>
+<html lang="en">
+<head>
+    <link type="text/css" rel="stylesheet" href="static/css/style.css">
+    <link type="text/css" rel="stylesheet" href="static/css/atom-one-dark-reasonable.css">
+    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+    <script src="static/js/include.js"></script>
 
-		<meta charset="utf-8">
-		<title>Mehvix | Projects</title>
-		<style>
-			:root{
-				--outside-bg-color: #600992;
-				--inside-bg-color: #cdd8df;
-			}
-		</style>
-	</head>
-	<body>
-		<br>
-		<div class="box">
-			<p style="margin-top: 0">
-				<p class="nav"><b><a href="./index.html">About</a> / <a href="projects.html" class="inverse-bg">Projects</a></b></p><br>
-			</p>
+    <meta charset="utf-8">
+    <title>Mehvix | Projects</title>
+    <style>
+        :root {
+            --outside-bg-color: #600992;
+            --inside-bg-color: #cdd8df;
+        }
+    </style>
+</head>
+<body>
+<br>
+<div class="box">
+    <p style="margin-top: 0">
+    <p class="nav"><b><a href="./index.html">About</a> / <a href="projects.html" class="inverse-bg">Projects</a></b></p>
+    <br>
+    </p>
 
-			<article>
-				---
-<!--			<pre><code class="py" style="font-size: 150%">#TODO</code></pre>-->
-				<table>
-					<tr>
-						<td class="projects-image">
-							<img src="static/media/projects/synapsbot-avatar.jpg" >
-						</td>
-						<td class="projects-text">
-							<b>Synaps Bot</b><br>
-							<code class="tags-py">python</code>
-						</td>
-					</tr>
+    <article>
+        ---
+        <!--			<pre><code class="py" style="font-size: 150%">#TODO</code></pre>-->
+        <table>
+            <tr>
+                <td class="projects-image">
+                    <img src="static/media/projects/synapsbot-avatar.jpg">
+                </td>
+                <td class="projects-text">
+                    <b>Synaps Bot</b><br>
+                    <code class="tags-py">python</code>
+                </td>
+            </tr>
 
-					<tr><td class="projects-image">---</td><td class="projects-text"></td></tr>
+            <tr>
+                <td class="projects-image">---</td>
+                <td class="projects-text"></td>
+            </tr>
 
-					<tr>
-						<td class="projects-image">
-							<img style="display: block;" src="static/media/projects/aoe2counters.jpg" >
-						</td>
-						<td class="projects-text">
-							<b>Age of Empires Counter List</b><br>
-							<code class="tags-sheet">sheets</code>
+            <tr>
+                <td class="projects-image">
+                    <img style="display: block;" src="static/media/projects/aoe2counters.jpg">
+                </td>
+                <td class="projects-text">
+                    <b>Age of Empires Counter List</b><br>
+                    <code class="tags-sheet">sheets</code>
 
-						</td>
-					</tr>
+                </td>
+            </tr>
 
-					<!--<tr><td class="projects-image">-&#45;&#45;</td><td class="projects-text"></td></tr>
+            <!--<tr><td class="projects-image">-&#45;&#45;</td><td class="projects-text"></td></tr>
 
-					<tr>
-						<td class="projects-image">
-							<img style="display: block;" src="static/media/projects/cs50-puzzle.JPG" >
-						</td>
-						<td class="projects-text">
-							<b>Harvard CS50X Puzzle Day</b><br>
-							<code class="tags-misc">misc.</code>
+            <tr>
+                <td class="projects-image">
+                    <img style="display: block;" src="static/media/projects/cs50-puzzle.JPG" >
+                </td>
+                <td class="projects-text">
+                    <b>Harvard CS50X Puzzle Day</b><br>
+                    <code class="tags-misc">misc.</code>
 
-						</td>
-					</tr>-->
+                </td>
+            </tr>-->
 
-					<tr><td class="projects-image">---</td><td class="projects-text"></td></tr>
+            <tr>
+                <td class="projects-image">---</td>
+                <td class="projects-text"></td>
+            </tr>
 
-					<tr>
-						<td class="projects-image">
-							<img style="display: block;" src="static/media/projects/greenwallet.png" >
-						</td>
-						<td class="projects-text">
-							<b>Green Wallet</b><br>
-							<code class="tags-webdev">webdev</code>
+            <tr>
+                <td class="projects-image">
+                    <img style="display: block;" src="static/media/projects/greenwallet.png">
+                </td>
+                <td class="projects-text">
+                    <b>Green Wallet</b><br>
+                    <code class="tags-webdev">webdev</code>
 
-						</td>
-					</tr>
+                </td>
+            </tr>
 
-					<tr><td class="projects-image">---</td><td class="projects-text"></td></tr>
+            <tr>
+                <td class="projects-image">---</td>
+                <td class="projects-text"></td>
+            </tr>
 
-					<tr>
-						<td class="projects-image">
-							<img style="display: block;" src="static/media/projects/.png" >
-						</td>
-						<td class="projects-text">
-							<b>ApplicationConfigs</b><br>
-							<code class="tags-py">python</code>
+            <tr>
+                <td class="projects-image">
+                    <img style="display: block;" src="static/media/projects/.png">
+                </td>
+                <td class="projects-text">
+                    <b>ApplicationConfigs</b><br>
+                    <code class="tags-py">python</code>
 
-						</td>
-					</tr>
+                </td>
+            </tr>
 
-					<tr><td class="projects-image">---</td><td class="projects-text"></td></tr>
+            <tr>
+                <td class="projects-image">---</td>
+                <td class="projects-text"></td>
+            </tr>
 
-					<tr>
-						<td class="projects-image">
-							<img style="display: block;" src="static/media/projects/nextcloudicon.png" >
-						</td>
-						<td class="projects-text">
-							<b>Server</b><br>
-							<code class="tags-php">php</code>
-							<code class="tags-shell">shell</code>
-							<code class="tags-misc">misc</code>
+            <tr>
+                <td class="projects-image">
+                    <img style="display: block;" src="static/media/projects/nextcloudicon.png">
+                </td>
+                <td class="projects-text">
+                    <b>Server</b><br>
+                    <code class="tags-php">php</code>
+                    <code class="tags-shell">shell</code>
+                    <code class="tags-misc">misc</code>
 
-						</td>
-					</tr>
+                </td>
+            </tr>
 
-					<tr><td class="projects-image">---</td><td class="projects-text"></td></tr>
+            <tr>
+                <td class="projects-image">---</td>
+                <td class="projects-text"></td>
+            </tr>
 
-					<tr>
-						<td class="projects-image">
-							<img style="display: block;" src="static/media/projects/redir.JPG" >
-						</td>
-						<td class="projects-text">
-							<b>Search Engine Redirect</b><br>
-							<code class="tags-javascript">javascript</code>
+            <tr>
+                <td class="projects-image">
+                    <img style="display: block;" src="static/media/projects/redir.JPG">
+                </td>
+                <td class="projects-text">
+                    <b>Search Engine Redirect</b><br>
+                    <code class="tags-javascript">javascript</code>
 
-						</td>
-					</tr>
+                </td>
+            </tr>
 
-					<tr><td class="projects-image">---</td><td class="projects-text"></td></tr>
+            <tr>
+                <td class="projects-image">---</td>
+                <td class="projects-text"></td>
+            </tr>
 
-					<tr>
-						<td class="projects-image">
-							<img style="display: block;" src="static/media/projects/presence.JPG" >
-						</td>
-						<td class="projects-text">
-							<b>Discord Application Presence</b><br>
-							<code class="tags-py">python</code>
-							<code class="tags-shell">shell</code>
+            <tr>
+                <td class="projects-image">
+                    <img style="display: block;" src="static/media/projects/presence.JPG">
+                </td>
+                <td class="projects-text">
+                    <b>Discord Application Presence</b><br>
+                    <code class="tags-py">python</code>
+                    <code class="tags-shell">shell</code>
 
-						</td>
-					</tr>
+                </td>
+            </tr>
 
-				</table>
-			</article>
+        </table>
+    </article>
 
-			<br><br>---
-			<p class="footer">
-				BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
-				ETH / <a href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
-				©
-				<script>
-					document.write("" + new Date().getFullYear())
-				</script>
-				- Max Vogel
-			</p>
-		</div>
-	</body>
+    ---
+    <p class="footer">
+        BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
+        ETH / <a
+            href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
+        ©
+        <script>
+            document.write("" + new Date().getFullYear())
+        </script>
+        - Max Vogel
+    </p>
+
+</div>
+</body>
 </html>
