--- a/index.html
+++ b/index.html
@@ -1,92 +1,94 @@
-<html>
-	<head>
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+<html lang="en">
+<head>
+    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-MMMMMMMM               MMMMMMMM                   hhhhhhh                                    iiii
-M:::::::M             M:::::::M                   h:::::h                                   i::::i
-M::::::::M           M::::::::M                   h:::::h                                    iiii
-M:::::::::M         M:::::::::M                   h:::::h
-M::::::::::M       M::::::::::M    eeeeeeeeeeee    h::::h hhhhh   vvvvvvv           vvvvvvviiiiiii xxxxxxx      xxxxxxx
-M:::::::::::M     M:::::::::::M  ee::::::::::::ee  h::::hh:::::hhh v:::::v         v:::::v i:::::i  x:::::x    x:::::x
-M:::::::M::::M   M::::M:::::::M e::::::eeeee:::::eeh::::::::::::::hhv:::::v       v:::::v   i::::i   x:::::x  x:::::x
-M::::::M M::::M M::::M M::::::Me::::::e     e:::::eh:::::::hhh::::::hv:::::v     v:::::v    i::::i    x:::::xx:::::x
-M::::::M  M::::M::::M  M::::::Me:::::::eeeee::::::eh::::::h   h::::::hv:::::v   v:::::v     i::::i     x::::::::::x
-M::::::M   M:::::::M   M::::::Me:::::::::::::::::e h:::::h     h:::::h v:::::v v:::::v      i::::i      x::::::::x
-M::::::M    M:::::M    M::::::Me::::::eeeeeeeeeee  h:::::h     h:::::h  v:::::v:::::v       i::::i      x::::::::x
-M::::::M     MMMMM     M::::::Me:::::::e           h:::::h     h:::::h   v:::::::::v        i::::i     x::::::::::x
-M::::::M               M::::::Me::::::::e          h:::::h     h:::::h    v:::::::v        i::::::i   x:::::xx:::::x
-M::::::M               M::::::M e::::::::eeeeeeee  h:::::h     h:::::h     v:::::v         i::::::i  x:::::x  x:::::x
-M::::::M               M::::::M  ee:::::::::::::e  h:::::h     h:::::h      v:::v          i::::::i x:::::x    x:::::x
-MMMMMMMM               MMMMMMMM    eeeeeeeeeeeeee  hhhhhhh     hhhhhhh       vvv           iiiiiiiixxxxxxx      xxxxxxx
+    MMMMMMMM               MMMMMMMM                   hhhhhhh                                    iiii
+    M:::::::M             M:::::::M                   h:::::h                                   i::::i
+    M::::::::M           M::::::::M                   h:::::h                                    iiii
+    M:::::::::M         M:::::::::M                   h:::::h
+    M::::::::::M       M::::::::::M    eeeeeeeeeeee    h::::h hhhhh   vvvvvvv           vvvvvvviiiiiii xxxxxxx      xxxxxxx
+    M:::::::::::M     M:::::::::::M  ee::::::::::::ee  h::::hh:::::hhh v:::::v         v:::::v i:::::i  x:::::x    x:::::x
+    M:::::::M::::M   M::::M:::::::M e::::::eeeee:::::eeh::::::::::::::hhv:::::v       v:::::v   i::::i   x:::::x  x:::::x
+    M::::::M M::::M M::::M M::::::Me::::::e     e:::::eh:::::::hhh::::::hv:::::v     v:::::v    i::::i    x:::::xx:::::x
+    M::::::M  M::::M::::M  M::::::Me:::::::eeeee::::::eh::::::h   h::::::hv:::::v   v:::::v     i::::i     x::::::::::x
+    M::::::M   M:::::::M   M::::::Me:::::::::::::::::e h:::::h     h:::::h v:::::v v:::::v      i::::i      x::::::::x
+    M::::::M    M:::::M    M::::::Me::::::eeeeeeeeeee  h:::::h     h:::::h  v:::::v:::::v       i::::i      x::::::::x
+    M::::::M     MMMMM     M::::::Me:::::::e           h:::::h     h:::::h   v:::::::::v        i::::i     x::::::::::x
+    M::::::M               M::::::Me::::::::e          h:::::h     h:::::h    v:::::::v        i::::::i   x:::::xx:::::x
+    M::::::M               M::::::M e::::::::eeeeeeee  h:::::h     h:::::h     v:::::v         i::::::i  x:::::x  x:::::x
+    M::::::M               M::::::M  ee:::::::::::::e  h:::::h     h:::::h      v:::v          i::::::i x:::::x    x:::::x
+    MMMMMMMM               MMMMMMMM    eeeeeeeeeeeeee  hhhhhhh     hhhhhhh       vvv           iiiiiiiixxxxxxx      xxxxxxx
 
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
-		<link type="text/css" rel="stylesheet" href="static/css/style.css" >
-		<link type="text/css" rel="stylesheet" href="static/css/atom-one-dark-reasonable.css">
+    <link type="text/css" rel="stylesheet" href="static/css/style.css">
+    <link type="text/css" rel="stylesheet" href="static/css/atom-one-dark-reasonable.css">
 
-		<script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
-		<script>hljs.initHighlightingOnLoad();</script>
+    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+    <script src="static/js/include.js"></script>
+    <meta charset="utf-8">
+    <title>Mehvix | home</title>
+    <style>
+        :root {
+            --outside-bg-color: #920909;
+        }
+    </style>
+</head>
+<body>
+<br>
+<div class="box">
+    <p class="nav"><b><a href="./index.html" class="inverse-bg">About</a></b><br></p>
+    <p>
+        Hello! I’m Max Vogel. I’m a
 
-		<meta charset="utf-8">
-		<title>Mehvix | home</title>
-		<style>
-			:root{
-				--outside-bg-color: #920909;
-			}
-		</style>
-	</head>
-	<body>
-		<br>
-		<div class="box">
-			<p class="nav"><b><a href="./index.html" class="inverse-bg">About</a></b><br></p>
-			<p>
-				Hello! I’m Max Vogel. I’m a
+        <script>
+            var today = new Date();  //initializes to current date
+            var bday = new Date();
+            bday.setFullYear(2002);
+            bday.setMonth(7 - 1);  //January is 0
+            bday.setDate(27);
+            bday.setHours(0);
+            bday.setMinutes(0);
+            var timeDiff = Math.abs(bday.getTime() - today.getTime());
+            document.write("" + Math.floor(timeDiff / ((1000 * 60 * 60 * 24 * 365))));  // ceil time in years ([milliseconds] * [seconds] * [min] * [hours] * [days])
+        </script>
 
-				<script>
-					var today = new Date();  //initializes to current date
-					var bday = new Date();
-					bday.setFullYear(2002);
-					bday.setMonth(7-1);  //January is 0
-					bday.setDate(27);
-					bday.setHours(0);
-					bday.setMinutes(0);
-					var timeDiff = Math.abs(bday.getTime() - today.getTime());
-					document.write("" + Math.floor(timeDiff / ((1000 * 60 * 60 * 24 * 365))));  // ceil time in years ([milliseconds] * [seconds] * [min] * [hours] * [days])
-				</script>
+        year old who goes to Middleton High School. <a href="./static/media/IMG_20191020_011042.jpg">Here’s a
+        photo of me at UW’s 2019 Madhacks</a>. In my free time I am probably fencing, coding, CADing, playing
+        TF2 competitively, or am working on something <a href="https://www.team1306.com">1306</a> related.
+    </p>
 
-				year old who goes to Middleton High School. <a href="./static/media/IMG_20191020_011042.jpg">Here’s a
-				photo of me at UW’s 2019 Madhacks</a>. In my free time I am probably fencing, coding, CADing, playing
-				TF2 pugs, or am working on something <a href="https://www.team1306.com">1306</a> related.
-			</p>
+    <p>
+        <b>Me</b><br>
+        - Email&emsp;&emsp;&emsp;&emsp;/ mehvix <code>at</code> protonmail <code>dot</code> com -- <a href="pgp.html">PGP
+        key</a><br>
+        - Github&emsp;&emsp;&emsp;/ <a href="https://github.com/mehvix">Mehvix</a><br>
+        - Discord &emsp;/ Mehvix#7966<br>
+        - Linkedin&emsp;/ <a href="https://www.linkedin.com/in/maxlvogel/">Max Vogel</a><br>
+        - Keybase&emsp;&emsp;/ <a href="https://keybase.io/mehvix">Mehvix</a><br>
+        - Resumé&emsp;&emsp;&emsp;/ <a href="https://cloud.mehvix.com/s/9oXaWqbLR4amMmz">Link</a>
+    </p><br>
 
-			<p>
-					<b>Me</b><br>
-					- Email&emsp;&emsp;&emsp;&emsp;/	mehvix <code>at</code> protonmail <code>dot</code> com -- <a href="pgp.html">PGP key</a><br>
-					- Github&emsp;&emsp;&emsp;/ 	<a href="https://github.com/mehvix">Mehvix</a><br>
-					- Discord &emsp;/ 	Mehvix#7966<br>
-					- Linkedin&emsp;/ 	<a href="https://www.linkedin.com/in/maxlvogel/">Max Vogel</a><br>
-					- Keybase&emsp;&emsp;/ 	<a href="https://keybase.io/mehvix">Mehvix</a><br>
-					- Resumé&emsp;&emsp;&emsp;/   <a href="https://cloud.mehvix.com/s/9oXaWqbLR4amMmz">Link</a>
-				</p><br>
+    <p>
+        <b>Pages</b><br>
+        - <a href="posts/index.html"> posts</a><br>
+        - <a href="projects.html"> projects</a><br>
+        - <a href="todo.html"> todo</a><br>
+        - <a href="serverservices.html">server service</a><br>
+    </p>
 
-			<p>
-				<b>Pages</b><br>
-				- <a href="posts/index.html">	posts</a><br>
-				- <a href="projects.html">		projects</a><br>
-				- <a href="todo.html">			todo</a><br>
-				- <a href="serverservices.html">server service</a><br>
-			</p><br>
-
-			---
-			<p class="footer">
-				BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
-				ETH / <a href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
-				©
-				<script>
-					document.write("" + new Date().getFullYear())
-				</script>
-				- Max Vogel
-			</p>
-		</div>
-	</body>
+    ---
+    <p class="footer">
+        BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
+        ETH / <a
+            href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
+        ©
+        <script>
+            document.write("" + new Date().getFullYear())
+        </script>
+        - Max Vogel
+    </p>
+</div>
+</body>
 </html>
