--- a/mc.html
+++ b/mc.html
@@ -1,38 +1,41 @@
-<html>
-	<head>
-		<link type="text/css" rel="stylesheet" href="static/css/style.css" >
-		<link type="text/css" rel="stylesheet" href="static/css/atom-one-dark-reasonable.css">
-		<script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
-		<script>hljs.initHighlightingOnLoad();</script>
+<html lang="en">
+<head>
+    <link type="text/css" rel="stylesheet" href="static/css/style.css">
+    <link type="text/css" rel="stylesheet" href="static/css/atom-one-dark-reasonable.css">
+    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+    <script src="static/js/include.js"></script>
 
-		<meta charset="utf-8">
-		<title>Mehvix | Projects</title>
-		<style>
-			:root{
-				--outside-bg-color: #8B4513;
-				--inside-bg-color: #cdd8df;
-			}
-		</style>
-	</head>
-	<body>
-		<br>
-		<div class="box">
-			<p class="nav"><b><a href="./index.html">About</a> / <a href="./serverservices.html">Server</a> / <a href="projects.html" class="inverse-bg">mc</a></b></p>
-				<code>mc.mehvix.com:25544</code><br><br>
-				<video style="width: 100%" src="./static/media/synapsmc.webm" controls autoplay>
-					Your browser does not support embedded video through HTML5 :(
-				</video>
+    <meta charset="utf-8">
+    <title>Mehvix | Projects</title>
+    <style>
+        :root {
+            --outside-bg-color: #8B4513;
+            --inside-bg-color: #cdd8df;
+        }
+    </style>
+</head>
+<body>
+<br>
+<div class="box">
+    <p class="nav"><b><a href="./index.html">About</a> / <a href="./serverservices.html">Server</a> / <a
+            href="projects.html" class="inverse-bg">mc</a></b></p>
+    <code>mc.mehvix.com:25544</code><br><br>
+    <video style="width: 100%" src="./static/media/synapsmc.webm" controls autoplay>
+        Your browser does not support embedded video through HTML5 :(
+    </video>
 
-			---
-			<p class="footer">
-				BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
-				ETH / <a href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
-				©
-				<script>
-					document.write("" + new Date().getFullYear())
-				</script>
-				- Max Vogel
-			</p>
-		</div>
-	</body>
+    ---
+    <p class="footer">
+        BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
+        ETH / <a
+            href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
+        ©
+        <script>
+            document.write("" + new Date().getFullYear())
+        </script>
+        - Max Vogel
+    </p>
+</div>
+</body>
 </html>
