--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         key</a><br>
         - Github&emsp;&emsp;&emsp;/ <a href="https://github.com/mehvix">Mehvix</a><br>
         - Discord &emsp;/ Mehvix#7966<br>
-        - Linkedin&emsp;/ <a href="https://www.linkedin.com/in/maxlvogel/">Max Vogel</a><br>
+        - Linkedin&emsp;/ <a href="https://www.linkedin.com/in/mehvix/">Max Vogel</a><br>
         - Keybase&emsp;&emsp;/ <a href="https://keybase.io/mehvix">Mehvix</a><br>
         - Resumé&emsp;&emsp;&emsp;/ <a href="https://cloud.mehvix.com/s/9oXaWqbLR4amMmz">Link</a>
     </p><br>
